--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -1,11 +1,12 @@
-name: Delete old workflow runs
+name: Clear old workflow runs
+
 on:
+  workflow_dispatch:           # 手动触发
   schedule:
-    - cron: '0 0 * * 0'   # 每周日 00:00 (UTC)
-  workflow_dispatch:       # ← 加这一行！允许手动触发
+    - cron: '0 * * * *'       # 每小时自动运行一次
 
 jobs:
-  del_runs:
+  clear_runs:
     runs-on: ubuntu-latest
     steps:
       - name: Delete workflow runs
@@ -13,5 +14,4 @@ jobs:
         with:
           token: ${{ secrets.AUTH_PAT }}
           repository: ${{ github.repository }}
-          retain_days: 0
-          ignore_current_run: true  # ← 忽略当前运行，不删除自己
+          retain_days: 0       # 0 = 删除所有可删除的 run
