--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -1,8 +1,8 @@
 name: Cleanup All Workflow Runs
 on:
   schedule:
-    - cron: '0 0 * * 0'
-  workflow_dispatch:
+    - cron: '0 0 * * 0'  # 每周日凌晨自动运行
+  workflow_dispatch:      # 可手动触发
 
 jobs:
   cleanup:
